[GTK Config] Construct font style by hand instead of relying on Qt function

Summary:
It has been reported, that on localized systems
the font style was written in local language.
Therefore config line was incorrectly read by
GTK and therefore applications displayed bad
font. To avoid that this commit is introduced.

BUG: 333146
FIXED-IN: 5.18.4

Test Plan:

Reviewers: #plasma, ervin, bport, meven, davidedmundson, ngraham

Reviewed By: ervin, ngraham

Subscribers: chauvin, davidre, davidedmundson, cfeck, ngraham, IlyaBizyaev, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27380